{
  "version": 4,
  "terraform_version": "0.12.24",
  "serial": 1639,
  "lineage": "20811ef4-b2ab-a297-d43f-ce2733a2f7e8",
  "resources": [
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "igw-0261e3afe72a24cc6",
            "owner_id": "395822310781",
            "tags": {
              "Name": "sadcloud_ig"
            },
            "vpc_id": "vpc-0a6a1228453998df1"
          }
        }
      ]
    },
    {
      "module": "module.elbv2",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395822310781:listener/app/tf-lb-2020033018060714460000000e/4cf74184b866857f/40ceb12fbdb77eaa",
            "certificate_arn": "arn:aws:iam::395822310781:server-certificate/test_cert",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:395822310781:targetgroup/tf-2020033018060057620000000d/53786ffcefd90c29",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:395822310781:listener/app/tf-lb-2020033018060714460000000e/4cf74184b866857f/40ceb12fbdb77eaa",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:395822310781:loadbalancer/app/tf-lb-2020033018060714460000000e/4cf74184b866857f",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-TLS-1-0-2015-04",
            "timeouts": null
          }
        }
      ]
    },
    {
      "module": "module.elbv2",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:395822310781:targetgroup/tf-2020033018060057620000000d/53786ffcefd90c29",
            "arn_suffix": "targetgroup/tf-2020033018060057620000000d/53786ffcefd90c29",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:395822310781:targetgroup/tf-2020033018060057620000000d/53786ffcefd90c29",
            "lambda_multi_value_headers_enabled": false,
            "name": "tf-2020033018060057620000000d",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a6a1228453998df1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": []
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "main",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395822310781:subnet/subnet-0f7942858dc15f50f",
            "assign_ipv6_address_on_creation": true,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-0f7942858dc15f50f",
            "ipv6_cidr_block": "2600:1f18:421f:9001::/64",
            "ipv6_cidr_block_association_id": "subnet-cidr-assoc-046de745d4d294d48",
            "map_public_ip_on_launch": true,
            "owner_id": "395822310781",
            "tags": {
              "Name": "sadcloud_subnet"
            },
            "vpc_id": "vpc-0a6a1228453998df1"
          }
        }
      ]
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "secondary",
      "each": "list",
      "provider": "provider.aws"
    },
    {
      "module": "module.network",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "each": "list",
      "provider": "provider.aws",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:395822310781:vpc/vpc-0a6a1228453998df1",
            "assign_generated_ipv6_cidr_block": true,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03049d3bc2f8c9cb4",
            "default_route_table_id": "rtb-081e88de65ddc6cf3",
            "default_security_group_id": "sg-031b3ce03d271fdbd",
            "dhcp_options_id": "dopt-2f2adf55",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0a6a1228453998df1",
            "instance_tenancy": "default",
            "ipv6_association_id": "vpc-cidr-assoc-0e27c4709c87eb783",
            "ipv6_cidr_block": "2600:1f18:421f:9000::/56",
            "main_route_table_id": "rtb-081e88de65ddc6cf3",
            "owner_id": "395822310781",
            "tags": {
              "Name": "sadcloud_vpc"
            }
          }
        }
      ]
    }
  ]
}